--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>sua doi lan 1</h2>
     <h2>sua doi lan 3</h2>
     <p>tôi vaf bạn đã xa nhau 1 thời gian dài nhưng những kí ức đó tui chưa thể quên được nó in sâu vào tâm trí tôitôi</p>
+    <a href="img/banner-sneakerholicvn2-1.jpg"></a>
 </body>
 </html>
